# MBP-T05-ChildLock

./: .gitignore  AGENTS.md  CMakeLists.txt  CodeTest.md  GITHUB.md  README.md  Software_Requirement_Specification  _Software_Requirement_Specification
.github/workflows/: ci.yml
diagram/sequence/: sequence_uc3.drawio  sequence_uc7.drawio  use case 2.drawio  use case 4.drawio  use case 5.drawio
diagram/usecase/: usecase_emergency.drawio  usecase_normal.drawio
doc/uml_diagram/flow_chart/: FG-01_door_control.drawio
docs/: DEVELOPMENT.md  Failure_Mode.md  MBP-T05_ChildLock_결과발표.pptx  MBP-T05_ChildLock_결과발표_Final.pptx  ReqTest.md  Software_Detailed_Design.md  Software_Requirement_Specification.md  System_Test_Cases.xlsx  주제1_5팀_PBL최종_제출자료.pptx
docs/coverage_report/: F01_InputMonitorAndValidator.c.html  F02_ChildLockStateDecision.c.html  F03_DoorEcuCommandHandler.c.html  F04_RearDoorOpenBlockHandler.c.html  F05_StatePersistenceManager.c.html  F06_HmiAndEventLogger.c.html  F07_RearRiskEvaluation.c.html  F08_RearRiskProtectionController.c.html  F09_RearSeatOccupancyAlert.c.html  F10_IgnitionOffStatusAlert.c.html  index.html
docs/diagram/flow_chart/: FG-02_exit_safety.drawio
docs/diagram/sequence/: sequence_uc1.drawio  sequence_uc6.drawio
docs/diagram/state/: childlock_state.drawio
include/: F01_InputMonitorAndValidator.h  F02_ChildLockStateDecision.h  F03_DoorEcuCommandHandler.h  F04_RearDoorOpenBlockHandler.h  F05_StatePersistenceManager.h  F07_RearRiskEvaluation.h  F10_IgnitionOffStatusAlert.h  child_lock_state_decision.hpp  childlock_types.h
include/childlock/: door_ecu_command_handler.h  ignition_off_status_alert.h  state_persistence_manager.h
src/: F01_InputMonitorAndValidator.c  F02_ChildLockStateDecision.c  F03_DoorEcuCommandHandler.c  F04_RearDoorOpenBlockHandler.c  F05_StatePersistenceManager.c  F06_HmiAndEventLogger.c  F07_RearRiskEvaluation.c  F08_RearRiskProtectionController.c  F09_RearSeatOccupancyAlert.c  F10_IgnitionOffStatusAlert.c  child_lock_state_decision.cpp
src/childlock/: door_ecu_command_handler.c  ignition_off_status_alert.c  state_persistence_manager.c
test/: CMakeLists.txt  child_lock_state_decision_test.cpp  test_F01_InputMonitorAndValidator.cpp  test_F02_ChildLockStateDecision.cpp  test_F03_DoorEcuCommandHandler.cpp  test_F04_RearDoorOpenBlockHandler.cpp  test_F05_StatePersistenceManager.cpp  test_F06_HmiAndEventLogger.cpp  test_F07_RearRiskEvaluation.cpp  test_F08_RearRiskProtectionController.cpp  test_F10_IgnitionOffStatusAlert.cpp  test_door_ecu_command_handler.cpp  test_ignition_off_status_alert.cpp  test_state_persistence_manager.cpp
tmp/: analyze2.py  analyze_pptx.py  create_pptx_v2.py  final_content.txt  inspect_slide6.py  issues.json  issues_utf.json  poster_content.txt  pptx_shapes.txt  pptx_updated_content.txt  prs.json  prs_utf.json  shapes.txt  shapes_report.txt  update_pptx_final.py  update_pptx_v3.py  update_slide6.py  update_slide6_final.py  update_slide6_v3.py  v3_output.txt
